Added pagination, filters and sorting to user and admin transactions. (#17)