@@ -8,6 +8,7 @@ import com.team9.virtualwallet.models.Pages;
 import com.team9.virtualwallet.models.Transaction;
 import com.team9.virtualwallet.models.User;
 import com.team9.virtualwallet.models.enums.Direction;
+import com.team9.virtualwallet.models.enums.Sort;
 import com.team9.virtualwallet.services.contracts.TransactionService;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PageableDefault;
@@ -20,6 +21,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
 import javax.servlet.http.HttpSession;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
@@ -49,37 +51,47 @@ public class AdminTransactionMvcController {
 
     @ModelAttribute("direction")
     public List<Direction> populateDirection() {
-        return List.of(Direction.values());
+        return Arrays.asList(Direction.values());
+    }
+
+    @ModelAttribute("sort")
+    public List<Sort> populateSort() {
+        return Arrays.asList(Sort.values());
     }
 
     @GetMapping
     public String showAdminTransactionsPage(HttpSession session, Model model,
-                                            @RequestParam(name = "direction", required = false) String direction,
-                                            @RequestParam(name = "startDate", required = false) @DateTimeFormat(pattern = "yyyy-MM-dd") Optional<Date> startDate,
-                                            @RequestParam(name = "endDate", required = false) @DateTimeFormat(pattern = "yyyy-MM-dd") Optional<Date> endDate,
                                             @RequestParam(name = "username", required = false) Optional<String> username,
                                             @RequestParam(name = "counterparty", required = false) Optional<String> counterparty,
+                                            @RequestParam(name = "direction", required = false) Optional<String> direction,
+                                            @RequestParam(name = "startDate", required = false) @DateTimeFormat(pattern = "yyyy-MM-dd") Optional<Date> startDate,
+                                            @RequestParam(name = "endDate", required = false) @DateTimeFormat(pattern = "yyyy-MM-dd") Optional<Date> endDate,
+                                            @RequestParam(name = "sortAmount", required = false) Optional<String> sortAmount,
+                                            @RequestParam(name = "sortDate", required = false) Optional<String> sortDate,
                                             @PageableDefault(page = 1) Pageable pageable) {
         try {
             User user = authenticationHelper.tryGetUser(session);
+            if (!user.isEmployee()) {
+                return "redirect:/panel";
+            }
             if (username.isPresent()) {
                 if (username.get().isBlank()) {
                     model.addAttribute("error", "You must provide an username!");
                     return "transactions-admin";
                 }
+                Pages<Transaction> filtered = service.employeeFilter(user,
+                        username.get(),
+                        counterparty.isEmpty() ? counterparty : Optional.empty(),
+                        direction.filter(s -> !s.equals("-1")).map(Direction::getEnum),
+                        startDate,
+                        endDate,
+                        sortAmount.filter(s -> !s.equals("-1")).map(Sort::getEnum),
+                        sortDate.filter(s -> !s.equals("-1")).map(Sort::getEnum),
+                        pageable);
+                model.addAttribute("transactions", filtered.getContent());
+                model.addAttribute("transactionsExist", !filtered.getContent().isEmpty());
+                model.addAttribute("pagination", filtered);
             }
-            Pages<Transaction> filtered = service.employeeFilter(user,
-                    username.get(),
-                    Direction.getEnum(direction),
-                    startDate,
-                    endDate,
-                    counterparty.isEmpty() ? counterparty : Optional.empty(),
-                    Optional.empty(),
-                    Optional.empty(),
-                    pageable);
-            model.addAttribute("transactions", filtered);
-            model.addAttribute("transactionsExist", !filtered.getContent().isEmpty());
-            model.addAttribute("pagination", filtered);
             return "transactions-admin";
         } catch (AuthenticationFailureException e) {
             return "redirect:/auth/login";
